app/assets/stylesheets/app/server_sidebar/ss_sidebar.scss
.ss-container {
    height: 100vh;
    width: 73px;
    z-index: 10;

    background-color: #202225;

    .home-link {
        .ss-home-hover-bar-relative-position-anchor {
            position: relative;
            width: 0;
            height: 0;

            aside.hovered {
                background-color: #fefefe;
                width: 9px;
                height: 20px;
                border-radius: 10px;

                position: absolute;
                top: 15px;
                left: -5px;
            }

            aside#selected {
                background-color: #fefefe;
                width: 9px;
                height: 40px;
                border-radius: 10px;

                position: absolute;
                top: 4.8px;
                left: -5px;
            }
        }

        .ss-logo-container {
            height: 50px;
            width: 50px;
            background-color: #37393f;
    
            margin-left: 10.5px;
            margin-top: 11.5px;

            border-radius: 50px;

            img {
                margin-left: 3.75px;
                margin-top: 3.75px;
                height: 40px;
                width: 40px;
            }
        }

        .ss-logo-container:hover {
            background-color: #0f65ae;
            cursor: pointer;
            border-radius: 18px;
        }

        .ss-logo-container#selected {
            background-color: #0f65ae;
            border-radius: 18px;
        }
    }

    .ss-home-relative-position-anchor {
        position: relative;
        width: 0;
        height: 0;

        .ss-home-tooltip-show {
            display: flex;
            justify-content: center;
            align-items: center;

            position: absolute;
            left: 79px;
            bottom: 7.5px;

            height: 34px;
            padding: 0 10px 0 10px;
            white-space: nowrap;
            border-radius: 6px;

            background-color: black;

            font-family: 'Nunito', sans-serif;
            color: white;
            font-size: 15px;
            font-weight: 900;
        }

        .ss-home-arrow-left {
            position: absolute;
            left: 73px;
            bottom: 17.5px;

            width: 0; 
            height: 0; 
            border-top: 7px solid transparent;
            border-bottom: 7px solid transparent;
            
            border-right: 7px solid black;
        }
    }

    .ss-servers {
        div {
            .ss-hover-bar-relative-position-anchor {
                position: relative;
                width: 0;
                height: 0;

                aside.hovered {
                    background-color: #fefefe;
                    width: 9px;
                    height: 20px;
                    border-radius: 10px;

                    position: absolute;
                    top: 15px;
                    left: -5px;
                }

                aside#selected {
                    background-color: #fefefe;
                    width: 9px;
                    height: 40px;
                    border-radius: 10px;

                    position: absolute;
                    top: 4.8px;
                    left: -5px;
                }
            }

            a {
                text-decoration: none;

                li {
                    display: flex;
                    align-items: center;
                    justify-content: center;
            
                    height: 50px;
                    width: 50px;
            
                    margin-left: 10.5px;
                    margin-top: 11px;
            
                    background-color: #37393f;
            
                    border-radius: 50px;

                    div {
                        font-family: 'Nunito', sans-serif;
                        color: white;
                        font-size: 20px;
                        font-weight: 500;
                    }
                }

                li#server-has-photo {
                    height: 50px;
                    width: 50px;
                    background-size: 100% 100%;
                    background-position: center;
                    border-radius: 50%;
                }

                li:hover {
                    background-color: #0f65ae;
                    cursor: pointer;
                    border-radius: 18px;
                }

                li#server-has-photo:hover {
                    background-color: white;
                    cursor: pointer;
                    border-radius: 18px;
                }
    
                li.selected {
                    background-color: #0f65ae;
                    border-radius: 18px;
                }

                li#server-has-photo.selected {
                    border-radius: 18px;
                }
            }

            .ss-relative-position-anchor {
                position: relative;
                width: 0;
                height: 0;

                .ss-name-show {
                    display: flex;
                    justify-content: center;
                    align-items: center;

                    position: absolute;
                    left: 79px;
                    bottom: 7.5px;

                    height: 34px;
                    padding: 0vh 10px 0vh 10px;
                    white-space: nowrap;
                    border-radius: 6px;

                    background-color: black;
    
                    font-family: 'Nunito', sans-serif;
                    color: white;
                    font-size: 15px;
                    font-weight: 900;
                }

                .ss-name-show-arrow-left {
                    position: absolute;
                    left: 73px;
                    bottom: 17.5px;

                    width: 0; 
                    height: 0; 
                    border-top: 7px solid transparent;
                    border-bottom: 7px solid transparent;
                    
                    border-right: 7px solid black;
                }
            }

        }
    }

    button {
        display: flex;
        align-items: center;
        justify-content: center;

        height: 50px;
        width: 50px;

        margin-left: 11.5px;
        margin-top: 11px;

        background-color: #37393f;

        border-radius: 50px;
        border: none;

        font-family: 'Nunito', sans-serif;
        text-decoration: none;
        color: white;
        font-size: 20px;
        font-weight: 500;
    }

    button:hover {
        background-color: #3ba55d;
        cursor: pointer;
        border-radius: 18px;
    }

    .ss-create-relative-position-anchor {
        position: relative;
        width: 0;
        height: 0;

        .ss-create-tooltip-show {
            display: flex;
            justify-content: center;
            align-items: center;

            position: absolute;
            left: 79px;
            bottom: 7.5px;

            height: 34px;
            padding: 0vh 10px 0vh 10px;
            white-space: nowrap;
            border-radius: 6px;

            background-color: black;

            font-family: 'Nunito', sans-serif;
            color: white;
            font-size: 15px;
            font-weight: 900;
        }

        .ss-create-arrow-left {
            position: absolute;
            left: 73px;
            bottom: 17.5px;

            width: 0; 
            height: 0; 
            border-top: 7px solid transparent;
            border-bottom: 7px solid transparent;
            
            border-right: 7px solid black;
        }
    }
}

